<resources>
    <string name="app_name">KebOn Admin</string>
    <string name="your_one_stop_ngardening_solution">Your one stop \ngardening solution</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="lihat_produk">Lihat Produk</string>
    <string name="konfirmasi_pembayaran">Konfirmasi\n Pembayaran</string>
    <string name="perkembangan_n_tanaman">Perkembangan \n Tanaman</string>
    <string name="id_produk">ID Produk</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="stok">Stok</string>
    <string name="dimensi_produk">Dimensi Produk</string>
    <string name="berat_produk">Berat Produk</string>
    <string name="ukuran_produk">Ukuran Produk</string>
    <string name="kategori_produk">Kategori Produk</string>
    <string name="cahaya_tanaman_produk">Cahaya Tanaman Produk</string>
    <string name="perawatan_produk">Perawatan Produk</string>
    <string name="isi_produk">Isi Produk</string>
    <string name="tipe_produk">Tipe Produk</string>
    <string name="jenis_produk">Jenis Produk</string>
    <string name="harga_beli_produk">Harga Beli Produk</string>
    <string name="harga_jual_produk">Harga Jual Produk</string>
    <string name="deskripsi_produk">Deskripsi Produk</string>
    <string name="merk_produk">Merk Produk</string>
    <string name="gambar_produk">Gambar Produk</string>
    <string name="simpan">Simpan</string>
    <string name="batal">Batal</string>
    <string name="daftar_produk">Daftar Produk</string>
    <string name="daftar_pembayaran">Daftar Pembayaran</string>
    <string name="alamat_pengiriman">Alamat Pengiriman</string>
    <string name="nama_alamat">Nama Alamat</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="produk_dibeli">Produk Dibeli</string>
    <string name="subtotal_produk">Subtotal Produk</string>
    <string name="rp0">Rp0</string>
    <string name="opsi_pengiriman">Opsi Pengiriman</string>
    <string name="reguler">Reguler</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="subtotal_pengiriman">Subtotal Pengiriman</string>
    <string name="total">Total</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="_0">0</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="jasa">Jasa</string>
    <string name="beli">Beli</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="durasi_perawatan">Durasi Perawatan</string>
    <string name="subtotal_perawatan">Subtotal Perawatan</string>
    <string name="daftar_tanaman">Daftar Tanaman</string>
</resources>