<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_produk_konfirmasi"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nama_produk_konfirmasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/nama_produk"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/iv_produk_konfirmasi"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_jumlah_beli_konfirmasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/_0"
        android:textColor="@color/colorBlack"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@id/iv_produk_konfirmasi"
        app:layout_constraintTop_toBottomOf="@id/tv_nama_produk_konfirmasi" />

    <TextView
        android:id="@+id/tv_harga_beli_konfirmasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/rp0"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nama_produk_konfirmasi" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorCream"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_harga_beli_konfirmasi" />


</androidx.constraintlayout.widget.ConstraintLayout>